feat creating a meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/n0CTkvL/pngwing-com.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explora el mundo Bateristico en Drummer House. Descubre su pasión por la percusión a través de interpretaciones cautivadoras, lecciones inspiradoras y un viaje único en el arte de la batería. Sumérgete en ritmos y melodías excepcionales que te llevarán a un emocionante viaje percusivo.">
     <title>Drum House</title>
   </head>
   <body>
